2017-11-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* json.c (func_table): Specify min_required_args to avoid compiler
	errors from older gcc versions.

2017-11-23         Arnold D. Robbins     <arnold@skeeve.com>

	* README: Updated some more.

2017-11-22         Arnold D. Robbins     <arnold@skeeve.com>

	* README: Updated.
	* gawkapi.h: Copied from gawk until 4.2.1 is released.

2017-11-20         Arnold D. Robbins     <arnold@skeeve.com>

	* awkjsonhandler.h: Add comment about relation to rwarray.c.
	* awkjsonhandler.cpp: Ditto.
	* json.cpp (write_elem): Check return value of Key().
	(write_array): Set errno if could not flatten the array.
	(do_json_toJSON): Clear errno at start, set it as appropriate,
	and update it inside gawk at the end. Better checking and
	error handling if nargs is 2.
	(dl_load): Check MPFR extensions.

2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	* json.cpp: Extension file.
	* awkjsonhandler.h: Class for use with rapidJson reader.
	* awkjsonhandler.cpp: Class for use with rapidJson reader.
	* README: Updated.

2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	* First version.