@@ -1,47 +1,60 @@
-Name:		@PACKAGE@
-Summary:	json library for gawk
-Version:	@VERSION@
-Release:	1%{?dist}
-License:	GPLv3+
-Group:		Development/Libraries
-URL:		http://sourceforge.net/projects/gawkextlib
-Source0:	%{url}/files/%{name}-%{version}.tar.gz
-BuildRequires:	/usr/include/gawkapi.h, /usr/include/gawkextlib.h
-Requires:	gawk
+Name:             @PACKAGE@
+Summary:          JSON encoder/decoder for gawk
+Version:          @VERSION@
+Release:          1%{?dist}
+License:          GPLv3+
+
+URL:              https://sourceforge.net/projects/gawkextlib
+Source:           %{url}/files/%{name}-%{version}.tar.gz
+
+Requires:         gawk
+BuildRequires:    gawk-devel
+BuildRequires:    gawkextlib-devel
+BuildRequires:    rapidjson-devel
+
+# Make sure the API version is compatible with our source code:
+BuildRequires:    gawk(abi) >= 2.0
+BuildRequires:    gawk(abi) < 3.0
+
+# At runtime, the ABI must be compatible with the compile-time version
+%global gawk_api_version %(gawk 'BEGINFILE {if (ERRNO) nextfile} match($0, /#define gawk_api_(major|minor)_version[[:space:]]+([[:digit:]]+)/, f) {v[f[1]] = f[2]} END {print (v["major"] "." v["minor"])}' /usr/include/gawkapi.h)
+Requires:         gawk(abi) >= %{gawk_api_version}
+Requires:         gawk(abi) < %(echo %{gawk_api_version} | gawk -F. '{printf "%d.0\n", $1+1}')
+
+# This is the default as of Fedora 23:
+%global _hardened_build 1
 
 %description
-The gawk-json package contains the gawk json shared library extension
-that provides several useful functions.
+The %{name} module provides a gawk extension library that uses RapidJSON to
+implement functions mapping between gawk associative arrays and JSON.
+
+# =============================================================================
 
 %prep
-%setup -q
+%autosetup
 
 %build
 %configure
-make %{?_smp_mflags}
+%make_build
 
 %check
 make check
 
 %install
-rm -rf %{buildroot}
-%makeinstall bindir=%{buildroot}/bin
+%make_install
 
-rm -f %{buildroot}%{_infodir}/dir
-
-%find_lang %name
-
-%clean
-rm -rf %{buildroot}
+# Install NLS language files:
+%find_lang %{name}
 
 %files -f %{name}.lang
-%defattr(-,root,root,-)
 %license COPYING
-%doc README NEWS
+%doc NEWS
 %doc test/*.awk
-%{_mandir}/man3/*
 %{_libdir}/gawk/json.so
+%{_mandir}/man3/*
+
+# =============================================================================
 
 %changelog
-* Sun Nov 19 2017 Arnold D. Robbins <arnold@skeeve.com> - @VERSION@-1
-- Rebuilt for new release
+* Mon Dec 04 2017 Andrew Schorr <ajschorr@fedoraproject.org> - @VERSION@-1
+- First version.
