@@ -1,3 +1,7 @@
+2017-12-04         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* json.3am: Replace RapidJson with RapidJSON in two places.
+
 2017-11-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* json.3am: Update links to be more relevant. Add NOTES
